# ai-api

./: .env  .gitignore  api_polling.py  api_sse.py  api_test_polling.js  api_test_sse.js  api_test_ws.js  api_websocket.py  backup.py  locustfile.py  locustfile_sse.py  locustfile_ws.py  main.py  plot_all_results.py  plot_results.py  pyproject.toml  test.py  test_visualize.py  utils.py  visu.py
static/: index.html  script.js
