[project]
name = "nnunet-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.132.0",
    "nnunetv2>=2.6.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "pydicom>=3.0.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.41.0",
]
